@@ -1,3 +1,12 @@
+2020-02-04 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/atomic.c
+	  support/regression/tests/bug3440327.c
+	  support/regression/tests/gcc-torture-execute-pr60003.c
+	  support/regression/tests/setjmp.c
+	  support/regression/tests/z80n-push-nn.c:
+	  Disable asm-based tests.
+
 2020-02-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
